# BSage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  vercel.json
.agent/: PROMPT.md  progress.txt  tasks.json
.claude/commands/: test.md
.claude/contexts/: debug.md  review.md
.claude/rules/: architecture.md  security.md  skill-system.md  testing.md
.claude/skills/: core-patterns.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-start.sh
.github/workflows/: cd.yml  ci.yml  demo-smoke.yml
bsage/: __init__.py  cli.py
bsage/core/: agent_loop.py  agent_loop_seed_refiner.py  agent_loop_tools.py  chat_bridge.py  config.py  credential_store.py  events.py  exceptions.py  llm.py  logging.py  maintenance.py  notification.py  patterns.py  plugin.py  plugin_loader.py  plugin_runner.py  prompt_registry.py  protocols.py  runner.py  runtime_config.py  safe_mode.py  scheduler.py  skill_context.py  skill_loader.py  skill_runner.py  tasks.py
bsage/demo/: __init__.py  auth.py  router.py  seed.py
bsage/garden/: __init__.py  analytics.py  audit_outbox.py  community.py  confidence.py  conflict.py  contradiction.py  dedup.py  edge_lifecycle.py  embedder.py  embeddings.py  file_index_reader.py  graph_backend.py  graph_extractor.py  graph_models.py  graph_retriever.py  graph_store.py  graph_subscriber.py  hybrid_search.py  index_reader.py  index_subscriber.py  ingest_compiler.py  llm_extractor.py  markdown_utils.py  maturity.py  multimodal.py  note.py  ontology.py  retriever.py  review_queue.py  storage.py  sync.py  vault.py  vault_backend.py  vault_linter.py  vector_store.py  vector_subscriber.py  write_queue.py  writer.py  writer_core.py  (+1 more)
bsage/gateway/: app.py  auth.py  authz.py  canonicalization_routes.py  chat.py  dependencies.py  event_broadcaster.py  mcp.py  mcp_api_keys_routes.py  mcp_tools.py  rate_limit.py  routes.py  ws.py
bsage/interface/: cli_interface.py  ws_interface.py
bsage/mcp/: __init__.py  api_keys.py  plugin_bridge.py  server.py  sse.py
bsage/tests/: conftest.py  test_agent_loop.py  test_agent_loop_seed_refiner.py  test_agent_loop_tools.py  test_ai_memory_input_plugin.py  test_analytics.py  test_audit_emit_routes.py  test_audit_gap_coverage.py  test_audit_outbox.py  test_authz_integration.py  test_auto_catalog.py  test_browser_agent_plugin.py  test_bsnexus_input_plugin.py  test_calendar_input_plugin.py  test_calendar_writer_plugin.py  test_canonicalization_cli.py  test_canonicalization_events.py  test_canonicalization_expire.py  test_canonicalization_index_legacy_paths.py  test_canonicalization_index_subscriber.py  test_canonicalization_lint.py  test_canonicalization_lock.py  test_canonicalization_mcp.py  test_canonicalization_merge_concepts.py  test_canonicalization_models.py  test_canonicalization_paths.py  test_canonicalization_proposals_store.py  test_canonicalization_propose_cli.py  test_canonicalization_proposer.py  test_canonicalization_rest.py  test_canonicalization_runtime_config.py  test_canonicalization_safe_mode.py  test_canonicalization_service.py  test_canonicalization_store.py  test_canonicalization_watcher.py  test_chat.py  test_chat_bridge.py  test_chat_promotion.py  test_chatgpt_memory_plugin.py  test_claude_code_memory_plugin.py  (+105 more)
deploy/: .env.demo.example  .env.example  Dockerfile  docker-compose.demo.yml  docker-compose.yml
frontend/: .env.example  .gitignore  .npmrc  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  tsconfig.json  vercel.json  vite.config.ts
frontend/app/: client-app.tsx  globals.css  layout.tsx  page.tsx
frontend/e2e/: auth.spec.ts  chat.spec.ts  dashboard.spec.ts  demo-smoke.spec.ts  dev-mode-verification.spec.ts  graph-visual-snapshot.spec.ts  graph.spec.ts  imports-exports.spec.ts  karpathy-wiki-api.spec.ts  knowledge-graph.spec.ts  mcp-pat-flow.spec.ts  mobile.spec.ts  navigation.spec.ts  phase0-live.spec.ts  plugin-manager.spec.ts  plugins.spec.ts  prod-deploy-smoke.spec.ts  settings.spec.ts  vault.spec.ts
frontend/src/: App.tsx  index.css
plugins/ai-memory-input/: plugin.py
plugins/browser-agent/: plugin.py
plugins/bsnexus-input/: plugin.py
plugins/calendar-input/: plugin.py
plugins/calendar-writer/: plugin.py
plugins/canon-expire/: plugin.py
plugins/canon-lint/: plugin.py
plugins/canon-watcher/: plugin.py
plugins/chatgpt-memory-input/: plugin.py
plugins/claude-code-memory-input/: plugin.py
plugins/claude-memory-input/: plugin.py
plugins/conversation-input/: plugin.py
plugins/discord-input/: plugin.py  requirements.txt
plugins/edge-lifecycle/: plugin.py
plugins/email-input/: plugin.py
plugins/email-sender/: plugin.py
plugins/git-input/: plugin.py
prompts/: chat.yaml  router.yaml  seed-refiner.yaml  skill.yaml  system.yaml
scripts/: import_memory_test.py
skills/: chat-promoter.md
(+456 files in other folders)
