[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsage"
version = "0.1.0"
description = "Personal AI agent that records everything in your 2nd Brain and proactively acts on it"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
    "apscheduler>=3.10.0",
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "jsonschema>=4.0.0",
    "bsvibe-auth[fastapi] @ git+https://github.com/BSVibe/BSVibe-Auth.git@v0.5.0#subdirectory=python",
    "bsvibe-authz @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-authz",
    "bsvibe-core @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-core",
    "bsvibe-fastapi @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-fastapi",
    "bsvibe-audit @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-audit",
    "bsvibe-demo @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-demo",
    "bsvibe-llm @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-llm",
    "python-dateutil>=2.9.0.post0",
    "networkx>=3.0",
    "cryptography>=43.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]
s3 = ["boto3>=1.28.0"]
all-plugins = ["boto3>=1.28.0", "python-dateutil>=2.8.0"]

[project.scripts]
bsage = "bsage.cli:main"
bsage-mcp = "bsage.mcp.stdio:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bsage/tests", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI idiomatically uses `param: Type = Depends(callable)` in route
# signatures — B008 flags this as a function call in argument defaults but
# FastAPI explicitly expects this pattern.
"bsage/gateway/routes.py" = ["B008"]
"bsage/gateway/authz.py" = ["B008"]
"bsage/mcp/sse.py" = ["B008"]
"bsage/gateway/mcp_api_keys_routes.py" = ["B008"]

[tool.coverage.run]
source = ["bsage"]
omit = ["bsage/tests/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
